# monitoring-of-moving-objects

./: .gitignore  Dockerfile  ER.erd.json  README.md  docker-compose.yml  project-structure.txt  pyproject.toml  pytest.ini  tests.sh
db/: schema.sql
images/: Thumbs.db
init/sql/: create_database.sql  create_tables.sql  create_users.sql
nginx/: nginx.conf
nginx/html/: documentation.html  legacy.html  managment.html  status.css  status.html  status.js
nginx/html/static/: index.html
report/: literature.txt
report/bmstu/: bmstu.cls
report/tex/: 00-tital.aux  00-tital.tex  01-ref.aux  01-ref.tex  02-intro.aux  02-intro.tex  03-analysis.aux  03-analysis.tex  04-design.aux  08-appendices.aux  bmstu.cls  lib.aux  lib.bib  rpz.aux  rpz.bcf  rpz.out  rpz.tex  rpz.toc
sql/: create_database.sql  create_tables.sql
src/core/interfaces/: alert_notifier.py  telemetry_repository.py  zone_repository.py
src/core/services/: alert_service.py  zone_monitoring.py
src/sensor_track_pro/: config.py
src/sensor_track_pro/api/: config.py  exceptions.py  main.py
src/sensor_track_pro/api/dependencies/: services.py
src/sensor_track_pro/api/middleware/: error_handler.py
src/sensor_track_pro/api/routers/: alerts.py  events.py  objects.py  routes.py  sensors.py  telemetry.py  users.py  zones.py
src/sensor_track_pro/api/routers/v1/: alerts.py  auth.py  objects.py  sensors.py  users.py
src/sensor_track_pro/api/routers/v2/: events.py  routes.py  users.py  zones.py
src/sensor_track_pro/business_logic/interfaces/repository/: ialert_repo.py  ievent_repo.py  iobject_repo.py  irout_repo.py  isensor_repo.py  itelemetry_repo.py  iuser_model.py  izone_repo.py
src/sensor_track_pro/business_logic/models/: alert_model.py  common_types.py  event_model.py  object_model.py  route_model.py  sensor_model.py  telemetry_model.py  user_model.py  zone_model.py
src/sensor_track_pro/business_logic/services/: alert_service.py  base_service.py  event_service.py  object_service.py  route_service.py  sensor_service.py  telemetry_service.py  user_service.py  zone_service.py
src/sensor_track_pro/data_access/: database.py
src/sensor_track_pro/data_access/models/: alerts.py  base.py  events.py  object_zones.py  objects.py  routes.py  sensors.py  telemetry.py  user_objects.py  users.py  zones.py
src/sensor_track_pro/data_access/repositories/: alerts_repo.py  base.py  events_repo.py  object_zones_repo.py  objects_repo.py  routes_repo.py  sensors_repo.py  telemetry_repo.py  users_repo.py  zones_repo.py
src/tests/: test_alert_service.py  test_zone_monitoring.py
templates/: index.html
tests/: conftest.py  import os.py  load_test_report.md  run_ab.sh  test_alert_service.py  test_data_access.py  test_event_service.py  test_object_service.py  test_route_service.py  test_sensor_service.py  test_services.py  test_user_service.py  test_zone_service.py
tests/integration/: test_data_access.py
tests/load_tests/: Thumbs.db  performance_report.txt  testing.py
tools/: check_balance.sh  loki-config.yaml  promtail-config.yaml
tools/grafana/dashboards/: app-logs.json
tools/grafana/provisioning/dashboards/: app-dashboard.yaml
tools/promtail-positions/: positions.yaml
